- tweak: Free engivend.

--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -766,6 +766,7 @@
     normalState: normal-unshaded
     ejectState: eject-unshaded
     denyState: deny-unshaded
+    priceMultiplier: 0.0
   - type: Sprite
     sprite: Structures/Machines/VendingMachines/engivend.rsi
     layers:
