--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -575,7 +575,7 @@
   groups:
   - LawyerHead # WD
   - CommonGlasses # WD
-  - CommonSecurityHeadset
+  - BasicSecurityHeadset # WD
   - CommonMaskCigarette # WD
   - LawyerNeck
   - LawyerJumpsuit
