--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/common.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/common.yml
@@ -6,7 +6,7 @@
     requirement:
       !type:RoleTimeRequirement
       role: JobSalvageSpecialist
-      time: 54000 # 15 hours
+      time: 9999999999 # 15 hours 54000
 
 # Head
 
