--- a/Resources/Prototypes/Loadouts/Miscellaneous/glasses.yml
+++ b/Resources/Prototypes/Loadouts/Miscellaneous/glasses.yml
@@ -6,7 +6,7 @@
     requirement:
       !type:RoleTimeRequirement
       role: JobLibrarian
-      time: 3600 # 1 hour of being the biggest nerd on the station
+      time: 9999999999 # 1 hour of being the biggest nerd on the station 3600
 
 - type: loadoutEffectGroup
   id: JensenTimer
@@ -15,7 +15,7 @@
     requirement:
       !type:DepartmentTimeRequirement
       department: Cargo
-      time: 18000 #5 hours of being a space trucker
+      time: 9999999999 #5 hours of being a space trucker 18000
 
 # Basic options
 # Glasses
