add security filled leather satchel to loadouts

--- a/Resources/Prototypes/Loadouts/Jobs/Security/common.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Security/common.yml
@@ -62,6 +62,16 @@
   equipment:
     belt: ClothingBeltSecurityWebbing
 
+# Backpack
+
+- type: itemLoadout
+  id: CommonSatchelLeatherSecurity
+  equipment: CommonSatchelLeatherSecurity
+- type: startingGear
+  id: CommonSatchelLeatherSecurity
+  equipment:
+    back: ClothingBackpackSatchelLeatherFilledSecurity
+
 # Job trinkets
 
 - type: itemLoadout # WD
