--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -1616,7 +1616,7 @@
   - SecurityBackpack
   - SecuritySatchel
   - SecurityDuffel
-  - CommonSatchelLeather
+  - CommonSatchelLeatherSecurity
 
 - type: loadoutGroup # WD
   id: CommonSecurityBelt
