--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/satchel.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/satchel.yml
@@ -16,6 +16,11 @@
     contents:
     - id: BoxSurvival
 
+- type: entity # WD
+  noSpawn: true
+  parent: [ClothingBackpackSatchelLeather, ClothingBackpackSatchelSecurityFilled]
+  id: ClothingBackpackSatchelLeatherFilledSecurity
+
 - type: entity
   noSpawn: true
   parent: ClothingBackpackSatchel
@@ -164,6 +169,17 @@
     contents:
       - id: BoxSurvivalSecurity
       - id: Flash
+
+- type: entity
+  parent: ClothingBackpackSatchelInspector
+  id: ClothingBackpackSatchelInspectorFilled
+  name: inspector's leather satchel
+  description: A stylish leather bag made from the skin of those who failed to do their job. It's best not to even try to find out what's inside.
+  components:
+  - type: StorageFill
+    contents:
+    - id: BoxSurvivalSecurity
+    - id: Flash
 
 - type: entity
   noSpawn: true
