--- a/Resources/Prototypes/SoundCollections/emotes.yml
+++ b/Resources/Prototypes/SoundCollections/emotes.yml
@@ -1,13 +1,17 @@
 - type: soundCollection
   id: MaleLaugh
   files:
-    - /Audio/Voice/Human/manlaugh1.ogg
-    - /Audio/Voice/Human/manlaugh2.ogg
+    - /Audio/White/Voice/Human/Male/laugh2.ogg # WD
+    - /Audio/White/Voice/Human/Male/laugh3.ogg # WD
+    - /Audio/White/Voice/Human/Male/laugh4.ogg # WD
+    - /Audio/White/Voice/Human/Male/laugh5.ogg # WD
 
 - type: soundCollection
   id: FemaleLaugh
   files:
-    - /Audio/Voice/Human/womanlaugh.ogg
+    - /Audio/White/Voice/Human/Female/laugh1.ogg # WD
+    - /Audio/White/Voice/Human/Female/laugh2.ogg # WD
+    - /Audio/White/Voice/Human/Female/laugh3.ogg # WD
 
 - type: soundCollection
   id: Claps
@@ -47,20 +51,30 @@
     - /Audio/Effects/Emotes/salute.ogg
 
 - type: soundCollection
-  id: MaleCry
+  id: MaleCrying
   files:
-    - /Audio/Voice/Human/cry_male_1.ogg
-    - /Audio/Voice/Human/cry_male_2.ogg
-    - /Audio/Voice/Human/cry_male_3.ogg
-    - /Audio/Voice/Human/cry_male_4.ogg
+    - /Audio/White/Voice/Human/Male/crying1.ogg # WD
+    - /Audio/White/Voice/Human/Male/crying2.ogg # WD
+    - /Audio/White/Voice/Human/Male/crying3.ogg # WD
+    - /Audio/White/Voice/Human/Male/crying4.ogg # WD
+    - /Audio/White/Voice/Human/Male/crying5.ogg # WD
+    - /Audio/White/Voice/Human/Male/crying6.ogg # WD
 
 - type: soundCollection
-  id: FemaleCry
+  id: FemaleCrying
   files:
-    - /Audio/Voice/Human/cry_female_1.ogg
-    - /Audio/Voice/Human/cry_female_2.ogg
-    - /Audio/Voice/Human/cry_female_3.ogg
-    - /Audio/Voice/Human/cry_female_4.ogg
+    - /Audio/White/Voice/Human/Female/crying1.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying2.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying3.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying4.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying5.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying6.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying7.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying8.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying9.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying10.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying11.ogg # WD
+    - /Audio/White/Voice/Human/Female/crying12.ogg # WD
 
 - type: soundCollection
   id: Whistles
