--- a/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
@@ -97,15 +97,16 @@
       - id: WeaponLightMachineGunL6
       - id: MagazineLightRifleBox
 
+# WD EDIT
 - type: entity
   parent: ClothingBackpackDuffelSyndicateBundle
   id: ClothingBackpackDuffelSyndicateFilledGrenadeLauncher
-  name: China-Lake bundle
-  description: "An old China-Lake grenade launcher bundled with 11 rounds of various destruction capability."
+  name: Krait Bundle
+  description: "An old Krait grenade launcher bundled with 11 rounds of various destruction capability."
   components:
   - type: StorageFill
     contents:
-      - id: WeaponLauncherChinaLake
+      - id: WeaponLauncherKrait
       - id: GrenadeBlast
         amount: 4
       - id: GrenadeFrag
