--- a/Resources/Prototypes/Entities/Structures/Decoration/mannequin.yml
+++ b/Resources/Prototypes/Entities/Structures/Decoration/mannequin.yml
@@ -103,6 +103,10 @@
   - type: Sprite
     sprite: Structures/Decoration/mannequin.rsi
     state: mannequin_woman
+    layers:
+    - map: [ "mannequin" ]
+      sprite: Structures/Decoration/mannequin.rsi
+      state: mannequin_woman
   - type: Construction
     graph: Mannequin
     node: mannequin_woman
