--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
@@ -67,7 +67,8 @@
     sprite: Objects/Weapons/Grenades/flashbang.rsi
   - type: FlashOnTrigger
     range: 7
-    forceStun: true # WD
+    stunTime: 2 # WD
+    knockdownTime: 20 # WD
   - type: SoundOnTrigger
     sound:
       path: "/Audio/Effects/flash_bang.ogg"
