--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -66,6 +66,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- name: StationCharter
       #- name: TelescopicBaton
 - type: entity
@@ -77,6 +78,7 @@
     contents:
       - id: BoxSurvivalEngineering
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -88,6 +90,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -99,6 +102,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -110,6 +114,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -121,6 +126,7 @@
     contents:
       - id: BoxSurvivalMedical
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -132,6 +138,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
