--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/duffelbag.yml
@@ -75,6 +75,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- name: StationCharter
       #- name: TelescopicBaton
 - type: entity
@@ -86,6 +87,7 @@
     contents:
       - id: BoxSurvivalEngineering
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -97,6 +99,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -108,6 +111,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -119,6 +123,7 @@
     contents:
       - id: BoxSurvivalMedical
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
@@ -130,6 +135,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
+      - id: Telebaton
       #- id: TelescopicBaton
 
 - type: entity
