--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/stunprod.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/stunprod.yml
@@ -27,19 +27,23 @@
       types:
         Blunt: 0
   - type: Stunprod
+  - type: DelayedKnockdownOnHit
+    delay: 4
   - type: MeleeWeapon
+    attackRate: 0.4
     canHeavyAttack: false
+    equipCooldown: 1
     wideAnimationRotation: -135
     damage:
       types:
-        Blunt: 9
+        Blunt: 12
     angle: 0
     animation: WeaponArcThrust
   - type: StaminaDamageOnHit
-    damage: 40
+    damage: 60
     sound: /Audio/Weapons/egloves.ogg
   - type: StaminaDamageOnCollide
-    damage: 40
+    damage: 30
     sound: /Audio/Weapons/egloves.ogg
   - type: UseDelay
   - type: Item
