--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/snatcherprod.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/snatcherprod.yml
@@ -27,18 +27,20 @@
       types:
         Blunt: 0
   - type: MeleeWeapon
+    attackRate: 0.4
     canHeavyAttack: false
+    equipCooldown: 1
     wideAnimationRotation: -135
     damage:
       types:
-        Blunt: 9
+        Blunt: 12
     angle: 0
     animation: WeaponArcThrust
   - type: StaminaDamageOnHit
-    damage: 40
+    damage: 60
     sound: /Audio/Weapons/egloves.ogg
   - type: StaminaDamageOnCollide
-    damage: 40
+    damage: 30
     sound: /Audio/Weapons/egloves.ogg
   - type: UseDelay
   - type: Item
@@ -71,6 +73,8 @@
       cell_slot: !type:ContainerSlot {}
   - type: Snatcherprod
   - type: Stunprod
+  - type: DelayedKnockdownOnHit
+    delay: 4
   - type: Construction
     deconstructionTarget: cuffs
     graph: StunprodGraph
