--- a/Resources/Prototypes/Alerts/alerts.yml
+++ b/Resources/Prototypes/Alerts/alerts.yml
@@ -19,6 +19,7 @@
     - category: Piloting
     - alertType: Corporeal
     - alertType: Stun
+    - alertType: Knockdown
     - category: Breathing # Vox gang not calling this oxygen
     - category: Pressure
     - alertType: Bleed
@@ -479,11 +480,19 @@
   name: Debug6
   description: Debug
 
+# WD-EDIT
 - type: alert
   id: CultBuffed
   icons: [ /Textures/Interface/Alerts/buff.png ]
   name: alerts-cult-buff-name
   description: alerts-cult-buff-desc
+
+# WD-EDIT
+- type: alert
+  id: Knockdown
+  icons: [ /Textures/White/Interface/Alerts/knockdown.png ]
+  name: alerts-knockdown-name
+  description: alerts-knockdown-desc
 
 # WD-EDIT
 - type: alert
