tweak: Изменены голобарьеры

--- a/Resources/Prototypes/Entities/Structures/Holographic/projections.yml
+++ b/Resources/Prototypes/Entities/Structures/Holographic/projections.yml
@@ -23,6 +23,12 @@
         behaviors:
           - !type:DoActsBehavior
             acts: [ "Destruction" ]
+  - type: Clickable # WD EDIT
+  - type: MeleeSound # WD EDIT
+    soundGroups:
+      Brute:
+        path:
+          "/Audio/Weapons/egloves.ogg"
 
 - type: entity
   id: HoloFan
@@ -71,7 +77,6 @@
       radius: 3
       color: red
     - type: Climbable
-    - type: Clickable
 
 - type: entity
   id: HolosignForcefield
