--- a/Resources/Prototypes/Entities/Objects/Misc/handcuffs.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/handcuffs.yml
@@ -17,6 +17,7 @@
     tags:
     - Handcuffs
   - type: MeleeWeapon
+    canBeBlocked: false
     wideAnimationRotation: 90
     resetOnHandSelected: false
     animation: WeaponArcDisarm
