--- a/Resources/Prototypes/Entities/Objects/Specific/Janitorial/janitor.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Janitorial/janitor.yml
@@ -250,6 +250,7 @@
     - type: Spillable
       solution: absorbed
     - type: MeleeWeapon
+      canBeBlocked: false
       soundNoDamage:
         path: "/Audio/Effects/Fluids/splat.ogg"
       damage:
