--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry-bottles.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry-bottles.yml
@@ -51,6 +51,7 @@
   - type: Spillable
     solution: drink
   - type: MeleeWeapon
+    canBeBlocked: false
     soundNoDamage:
       path: "/Audio/Effects/Fluids/splat.ogg"
     damage:
