--- a/Resources/Prototypes/_White/Entities/Cult/Items/hands.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/Items/hands.yml
@@ -9,6 +9,7 @@
   - type: Item
     size: Ginormous
   - type: MeleeWeapon
+    canBeBlocked: false
     canHeavyAttack: false
     canMiss: false
     attackRate: 2
