--- a/Resources/Prototypes/_White/Entities/Objects/Weapons/telebaton.yml
+++ b/Resources/Prototypes/_White/Entities/Objects/Weapons/telebaton.yml
@@ -37,6 +37,7 @@
     damage:
       types:
         Blunt: 0
+    bluntStaminaDamageFactor: 0.0 # so blunt doesn't deal stamina damage at all
   - type: StaminaDamageOnHit
     damage: 55
     sound: /Audio/White/Weapons/woodhit.ogg
