--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cups.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cups.yml
@@ -62,6 +62,7 @@
   - type: Spillable
     solution: drink
   - type: MeleeWeapon
+    canBeBlocked: false
     soundNoDamage:
       path: "/Audio/Effects/Fluids/splat.ogg"
     damage:
