--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/trash_drinks.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/trash_drinks.yml
@@ -20,6 +20,7 @@
     maxTransferAmount: 5
   - type: Drink
   - type: MeleeWeapon
+    canBeBlocked: false
     soundNoDamage:
       path: "/Audio/Effects/Fluids/splat.ogg"
     damage:
