--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -29,6 +29,7 @@
   - type: UseDelay
     delay: 1.0
   - type: MeleeWeapon
+    canBeBlocked: false
     wideAnimationRotation: 180
     soundHit:
       collection: ToySqueak
@@ -992,6 +993,7 @@
     sprite: Objects/Fun/toys.rsi
     state: foamblade
   - type: MeleeWeapon
+    canBeBlocked: false
     attackRate: 1.5
     angle: 0
     animation: WeaponArcThrust
@@ -1325,6 +1327,7 @@
     sprite: Objects/Weapons/Melee/cutlass.rsi
     state: foam_icon
   - type: MeleeWeapon
+    canBeBlocked: false
     attackRate: 1.5
     range: 2.0
     angle: 0
@@ -1383,6 +1386,7 @@
     - type: DisarmMalus
       malus: 0
     - type: MeleeWeapon
+      canBeBlocked: false
       soundHit:
         collection: RubberHammer
         params:
@@ -1424,6 +1428,7 @@
       params:
         variation: 0.125
   - type: MeleeWeapon
+    canBeBlocked: false
     soundHit:
       collection: Parp
       params:
