NameFix by Reizor32

--- a/Resources/Prototypes/Datasets/Names/first_female.yml
+++ b/Resources/Prototypes/Datasets/Names/first_female.yml
@@ -154,6 +154,7 @@
   - Криста
   - Кристиана
   - Кристина
+  - Ксения
   - Кристобель
   - Сиара
   - Синди
@@ -232,7 +233,9 @@
   - Евфимия
   - Юстас
   - Ева
+  - Екатерина
   - Евангелина
+  - Елизавета
   - Эвелина
   - Эвелина
   - Эвелин
@@ -258,8 +261,10 @@
   - Джина
   - Джинджер
   - Жизель
+  - Жанна
   - Глэдвин
   - Гленна
+  - Галина
   - Глория
   - Грейс
   - Грейси
@@ -294,6 +299,7 @@
   - Инносент
   - Ирен
   - Ирис
+  - Ирина
   - Изабель
   - Изабелла
   - Изабель
@@ -356,6 +362,7 @@
   - Джойе
   - Джулия
   - Юлиана
+  - Юлия
   - Джулианна
   - Джули
   - Джульетта
@@ -415,8 +422,6 @@
   - Кимбэрли
   - Кимора
   - Кира
-  - Кристен
-  - Кристина
   - Кайла
   - Кайли
   - Кира
@@ -427,6 +432,7 @@
   - Лалла
   - Лана
   - Латания
+  - Лариса
   - Лаура
   - Лорен
   - Лауренсия
@@ -440,7 +446,6 @@
   - Лейлани
   - Лена
   - Лесли
-  - Лесли
   - Лесси
   - Лета
   - Лекси
@@ -452,7 +457,6 @@
   - Лилиан
   - Лилиана
   - Лилиан
-  - Лилиана
   - Лилли
   - Лили
   - Линдси
@@ -567,7 +571,9 @@
   - Ноуэлл
   - Нидия
   - Найла
+  - Оксана
   - Олива
+  - Ольга
   - Оливия
   - Орали
   - Пейдж
@@ -576,11 +582,8 @@
   - Париж
   - Пейшенс
   - Патриция
+  - Полина
   - Пэйлин
-  - Пейтон
-  - Пене
-  - Пенелопа
-  - Сапсан
   - Перла
   - Пейтон
   - Фиби
@@ -588,7 +591,6 @@
   - Филисс
   - Филлида
   - Пайпер
-  - Порше
   - Пресли
   - Присцилла
   - Проспер
@@ -596,6 +598,7 @@
   - Киана
   - Рэйчел
   - Рэйган
+  - Регина
   - Раэлин
   - Рейн
   - Ранда
@@ -624,7 +627,7 @@
   - Шалфей
   - Салли
   - Саманта
-  - Самара
+  - Светлана
   - Сандра
   - Сара
   - Сара
@@ -638,6 +641,7 @@
   - Сенеса
   - Серена
   - Серенити
+  - Софья
   - Шана
   - Шаника
   - Шанна
@@ -684,7 +688,6 @@
   - Тори
   - Трейси
   - Трейси
-  - Троица
   - Улисса
   - Валари
   - Валентина
@@ -708,3 +711,6 @@
   - Иоланда
   - Зельда
   - Зои
+  - Зоя
+  - Злата
+  - Яна
