--- a/Resources/Prototypes/Datasets/Names/first_male.yml
+++ b/Resources/Prototypes/Datasets/Names/first_male.yml
@@ -4,21 +4,25 @@
   - Айден
   - Аарон
   - Абель
+  - Алексей
   - Авраам
   - Адам
   - Адан
+  - Анатолий
   - Аден
   - Адольф
   - Адриан
   - Эйден
   - Эйден
   - Алан
+  - Аристарх
   - Альберт
   - Альберто
   - Олден
   - Алек
   - Алехандро
   - Алекс
+  - Афанасий
   - Александр
   - Алексис
   - Альфред
@@ -62,6 +66,8 @@
   - Беннет
   - Билл
   - Блейк
+  - Борис
+  - Бронислав
   - Брэдли
   - Брейди
   - Брэндон
@@ -148,6 +154,8 @@
   - Кертис
   - Сай
   - Дакота
+  - Давид
+  - Дмитрий
   - Даллас
   - Далтон
   - Дэмиан
@@ -223,10 +231,12 @@
   - Иезекииль
   - Эзра
   - Фабиан
+  - Федор
   - Феликс
   - Фентон
   - Фернандо
   - Финн
+  - Филипп
   - Фитц
   - Флик
   - Флинт
@@ -268,6 +278,8 @@
   - Хан
   - Харрисон
   - Гарри
+  - Геннадий
+  - Григорий
   - Хартли
   - Харви
   - Хейден
@@ -288,6 +300,7 @@
   - Исмаил
   - Айзек
   - Иван
+  - Илья
   - Изая
   - Джейс
   - Джек
@@ -384,7 +397,10 @@
   - Кевин
   - Халил
   - Кингстон
+  - Кирилл
+  - Клим
   - Коби
+  - Константин
   - Колтон
   - Кристофер
   - Кайл
@@ -404,6 +420,7 @@
   - Ленни
   - Лео
   - Леонард
+  - Леонид
   - Леонардо
   - Леонель
   - Лерой
@@ -442,6 +459,8 @@
   - Марвин
   - Мейсон
   - Матео
+  - Матвей
+  - Михаил
   - Мэтью
   - Морис
   - Маурисио
@@ -475,10 +494,13 @@
   - Нельсон
   - Ник
   - Николас
+  - Николай
+  - Никита
   - Ной
   - Ноэль
   - Нолан
   - Оливер
+  - Олег
   - Омар
   - Опи
   - Орландо
@@ -489,6 +511,8 @@
   - Освальд
   - Оуэн
   - Пабло
+  - Павел
+  - Петр
   - Пэджет
   - Паркер
   - Патрик
@@ -497,6 +521,7 @@
   - Пэкстон
   - Пэйтон
   - Персиваль
+  - Прохор
   - Перш
   - Питер
   - Пейтон
@@ -525,6 +550,10 @@
   - Райли
   - Ривер
   - Роберт
+  - Роман
+  - Родион
+  - Руслан
+  - Рудольф
   - Роберто
   - Рокко
   - Роджер
@@ -558,6 +587,10 @@
   - Скотти
   - Себастьян
   - Серджио
+  - Сергей
+  - Семен
+  - Станислав
+  - Степан
   - Сет
   - Сеймур
   - Шейн
@@ -580,6 +613,7 @@
   - Таннер
   - Тейт
   - Тейлор
+  - Тимур
   - Тел
   - Террелл
   - Терри
@@ -606,7 +640,15 @@
   - Уланд
   - Ульрик
   - Уриэль
+  - Вадим
+  - Вальтер
+  - Валентин
+  - Вениамин
+  - Вольдемар
+  - Всеволод
   - Вон
+  - Вячеслав
+  - Виталий
   - Виктор
   - Винс
   - Винсент
@@ -634,3 +676,6 @@
   - Зейден
   - Зик
   - Сион
+  - Эдуард
+  - Эрнест
+  - Юрий
