--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -574,6 +574,7 @@
   - InspectorShoes
   - InspectorPDA
   - BriefcaseInhand
+  - SelfDefenceDevices # WD
   - InspectorJobTrinkets
   - Trinkets
 
