- fix: Narsie not spawning, items not dropping on paralyze, cult tweaks.

--- a/Resources/Prototypes/_White/Construction/Cult/graphs.yml
+++ b/Resources/Prototypes/_White/Construction/Cult/graphs.yml
@@ -87,6 +87,7 @@
           completed:
             - !type:SnapToGrid
               southRotation: true
+            - !type:CheckForStructure
           steps:
             - material: RunicMetalSheets
               amount: 4
