- tweak: Engi belt in sus box.

--- a/Resources/Prototypes/Catalog/Fills/Items/toolboxes.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/toolboxes.yml
@@ -112,12 +112,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: Crowbar
-    - id: Wrench
-    - id: Screwdriver
-    - id: Wirecutter
-    - id: Welder
-    - id: Multitool
+    - id: ClothingBeltUtilityEngineering
     - id: ClothingHandsGlovesCombat
     - id: ClothingMaskGasSyndicate
 
