- add: Update thermal visibility.

--- a/Resources/Prototypes/_White/Entities/Cult/constructs.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/constructs.yml
@@ -84,6 +84,7 @@
       group: Construct
     - type: GlobalAntagonist
       antagonistPrototype: globalAntagonistCult
+    - type: ThermalBlocker
 
 - type: entity
   id: JuggernautConstruct
